--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,5 @@ drivers/chromedriver
 indeed-preproc
 fydjob/output/
 fydjob/database/
-fydjob/big_models
+fydjob/data/big_models
 fydjob/discarded.py
