--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ drivers/chromedriver
 indeed-preproc
 fydjob/output/
 fydjob/database/
-fydjob/data/big_models
-fydjob/big_models
+fydjob/data/big_models/
+fydjob/big_models/
 fydjob/discarded.py
 fydjob/cache
